force-app/main/default/objects/agrid__Configuration_Sharing__c/agrid__Configuration_Sharing__c.object-meta.xml
<CustomObject>
    <label>Configuration Sharing</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Configuration Sharing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Sharings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>