force-app/main/default/objects/agrid__Configuration_Sharing__c/fields/agrid__Related_Id__c.field-meta.xml
<CustomField>
    <fullName>agrid__Related_Id__c</fullName>
    <label>Related Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>