force-app/main/default/objects/agrid__Configuration_Sharing__c/fields/agrid__Share_Type__c.field-meta.xml
<CustomField>
    <fullName>agrid__Share_Type__c</fullName>
    <label>Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Role &amp; Subordinate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>